--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -5,10 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="bootstrap-4.2.1-dist/css/bootstrap.min.css" />
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>AdoptaYA!</title>
 </head>
 <body>
-    <h1>Formulario de Contacto</h1>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <h3>Adopta<span class="color-acento">YA!</span></h3>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="assets/images/menu.svg">
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#hero">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#nuestrasmascotas">Nuestras Mascotas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#team">Quienes Somos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <h2>Formulario de Contacto</h2>
 <form method="POST" action="/index.php" class="needs-validation" novalidate>
     <div>
         <label>Nombre</label>
